tests/gen-test/test_out/external.txt
error: function or variable not found
 --> external\root.ctl:6:5
  |
6 |     putchar('\n')
  |     ^^^^^^^ this does not exist
  |
  = info: queried 'putchar'

info: mir repr of functions:


error: no entry points found
 = help: add '#[entry]' to a function that should take this role

